# n3rverberage

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVANGELION.md  README.md  SECURITY.md  n3rv_memory_bridge.py  opencode.json  pyproject.toml
.github/workflows/: ci.yml  init-wiki.yml  publish.yml
.opencode/agents/: n3rv.md  sdd-archiver.md  sdd-explorer.md
.opencode/commands/: handoff.md  judgment-day.md  review.md  sdd-new.md
.opencode/plugins/: n3rv-lifecycle.js  n3rv-shell-env.js  nerv-shell-env.js
.opencode/scripts/: github-mcp-wrapper.sh
.opencode/tools/: n3rv-stats.ts  nerv-stats.ts
docs/: ARCHITECTURE.md  CNAME  DEPLOYMENT.md  MCP-TOOLS.md  SDD-WORKFLOW.md  index.html
src/n3rv/: cli.py  cli_memory.py  config.py  daemon.py  platform.py  util.py
src/n3rv/a2a/: __init__.py  agent_cards.py  hub.py  router.py  state.py
src/n3rv/init/: __init__.py  context.py  detector.py  registry.py  renderer.py  update.py  writer.py
src/n3rv/init/analyzer/: __init__.py  frameworks.py  mappings.py  mcp_recommender.py  profile.py  structure.py  tools.py
src/n3rv/init/templates/: CONTRIBUTING.md.j2  SECURITY.md.j2  opencode.json.j2
src/n3rv/init/templates/githooks/: pre-push.py.j2
src/n3rv/init/templates/n3rv/systemd/: n3rv-hub.service.j2
src/n3rv/init/templates/nerv/: a2a-config.yaml.j2
src/n3rv/init/templates/opencode/: agents.md.j2  package.json.j2
src/n3rv/init/templates/opencode/agents/: git-ops.md.j2  github-ops.md.j2  n3rv.md.j2  nerv.md.j2  sdd-archiver.md.j2  sdd-designer.md.j2  (+5 more)
src/n3rv/mcp/: __init__.py  client.py  hub_server.py  memory_server.py  memory_service.py  relation_store.py  session_manager.py  shared.py  vector_store.py
src/n3rv/models/: a2a.py  memory.py
src/n3rverberage/: cli.py  cli_memory.py  cli_org.py  config.py  org.py
src/n3rverberage/init/: __init__.py  update.py  writer.py
src/n3rverberage/init/templates/: context.json  opencode.json.j2  opencode.template.json.j2
src/n3rverberage/mcp/: memory_server.py  memory_service.py
src/n3rverberage/providers/: __init__.py  base.py  factory.py  fallback.py  local.py  models.py  openai.py  qwen.py  tts.py
src/nerv/: cli.py  config.py
src/nerv/a2a/: hub.py  state.py
src/nerv/init/: __init__.py  context.py  update.py  writer.py
src/nerv/init/analyzer/: __init__.py  frameworks.py  mappings.py  profile.py  structure.py
src/nerv/init/templates/: opencode.json.j2
src/nerv/mcp/: hub_server.py  memory_server.py  shared.py
tests/: conftest.py  test_config.py
tests/a2a/: test_agent_cards.py  test_hub.py  test_hub_recovery.py  test_state_list_tasks.py  test_state_subscribe.py
tests/cli/: test_cli_memory.py
tests/init/: conftest.py  test_cli_init.py  test_cli_update.py  test_context.py  test_context_validation.py  test_detector.py  test_init.py  test_init_orchestrator.py  test_lockfile.py  test_registry.py  test_renderer.py  test_updater.py  test_writer.py
tests/init/analyzer/: test_frameworks.py  test_mcp_recommender.py  test_structure.py  test_tools.py
tests/mcp/: test_hub_server.py  test_memory_server.py
tests/org/: test_cli_org.py
tests/plugins/: test_lifecycle_plugin.py
tests/providers/: conftest.py  test_base.py  test_factory.py  test_fallback.py  test_local.py  test_models.py  test_openai.py  test_qwen.py  test_tts.py
tests/tools/: test_n3rv_stats.py  test_n3rverberage_stats.py
(+31 files in other folders)
