[project]
name = "nerv"
version = "0.1.0"
description = "Invisible engineering infrastructure for opencode agents."
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "chromadb>=1.5.8",
    "onnxruntime>=1.26.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mcp>=1.27.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "typer>=0.24.2",
    "watchdog>=6.0.0",
]

[project.scripts]
nerv = "nerv.cli:main"
nerv-memory = "nerv.mcp.memory_server:main"
nerv-hub = "nerv.mcp.hub_server:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["B008", "N806", "N814"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
